[gd_scene load_steps=9 format=4 uid="uid://cynf57roqmasn"]

[ext_resource type="Script" path="res://hud.gd" id="1_2l5i1"]
[ext_resource type="Texture2D" uid="uid://ccac4ujopm6hu" path="res://HealthUI.png" id="2_8tbdl"]
[ext_resource type="Texture2D" uid="uid://dgq62f1dy3j8" path="res://environment/Dungeon_Tile_Set.png" id="3_cs22y"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_uey1o"]
texture = ExtResource("3_cs22y")
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 2, -8, 8, 8, 8, 8, -8, -8, -8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
3:1/0 = 0
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-14, 8, 2, -8, 8, -8, 8, 8)
6:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
5:2/0 = 0
6:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0
6:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
5:5/0 = 0
6:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
5:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
5:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
5:10/0 = 0
7:10/0 = 0
8:10/0 = 0
10:10/0 = 0
12:10/0 = 0
13:10/0 = 0
1:11/0 = 0
2:11/0 = 0
5:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
12:11/0 = 0
13:11/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
2:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0

[sub_resource type="TileSet" id="TileSet_hrye7"]
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 5
sources/0 = SubResource("TileSetAtlasSource_uey1o")

[sub_resource type="SystemFont" id="SystemFont_w3o8x"]
font_names = PackedStringArray("DungeonFont")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_t7gnw"]
font_names = PackedStringArray("DungeonFont")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_bxxou"]
font_names = PackedStringArray("DungeonFont")
subpixel_positioning = 0

[node name="HUD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_2l5i1")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 20.0
offset_top = 15.0
offset_right = 77.0
offset_bottom = 152.0
theme_override_font_sizes/font_size = 100
text = "3"

[node name="Flash" type="Timer" parent="."]
wait_time = 0.1

[node name="HealthUi" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(124, 53)
scale = Vector2(6.70681, 5.83887)
texture = ExtResource("2_8tbdl")
vframes = 7

[node name="StartScreen" type="Node2D" parent="."]
visible = false

[node name="Background" type="TileMapLayer" parent="StartScreen"]
texture_filter = 1
position = Vector2(-31, -9)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAAAAAAAAACAAMAAAAAAAEAAAADAAIAAAAAAAIAAAADAAIAAAABAAAAAAACAAMAAAABAAEAAAAIAAYAAAABAAIAAAAJAAcAAAACAAAAAAACAAMAAAACAAEAAAAJAAYAAAACAAIAAAAKAAcAAAADAAAAAAACAAMAAAADAAEAAAAJAAUAAAADAAIAAAACAAYAAAAEAAAAAAACAAMAAAAEAAEAAAAMAAYAAAAEAAIAAAACAAYAAAAFAAAAAAACAAMAAAAFAAEAAAAGAAcAAAAGAAAAAAACAAMAAAAGAAEAAAAHAAcAAAAAAAMAAAADAAIAAAAAAAQAAAADAAIAAAABAAMAAAAHAAYAAAABAAQAAAAHAAcAAAAHAAUAAAAGAAYAAAAHAAYAAAACAAYAAAAIAAUAAAAHAAYAAAAIAAYAAAACAAYAAAALAAAAAAACAAMAAAALAAEAAAAGAAcAAAAMAAAAAAACAAMAAAAMAAEAAAAHAAcAAAAPAAEAAAAGAAYAAAAPAAIAAAAKAAEAAAAQAAEAAAAHAAYAAAAQAAIAAAALAAEAAAANAAMAAAACAAIAAAANAAQAAAACAAIAAAANAAUAAAAIAAcAAAAOAAMAAAACAAIAAAAOAAQAAAACAAIAAAAOAAUAAAAJAAcAAAAPAAMAAAAKAAIAAAAPAAQAAAAKAAYAAAAPAAUAAAAKAAcAAAAQAAMAAAALAAIAAAAQAAQAAAALAAYAAAAQAAUAAAALAAcAAAARAAMAAAAMAAUAAAARAAQAAAAMAAYAAAARAAUAAAAMAAcAAAANAAAAAAACAAMAAAANAAEAAAAMAAIAAAANAAIAAAACAAIAAAAOAAAAAAACAAMAAAAOAAEAAAANAAIAAAAOAAIAAAANAAMAAAACAAYAAAAKAAEAAAACAAcAAAAKAAIAAAADAAYAAAALAAEAAAADAAcAAAALAAIAAAANAAYAAAAHAAYAAAANAAcAAAAHAAcAAAAOAAYAAAAIAAYAAAAOAAcAAAAIAAcAAAAPAAYAAAAJAAYAAAAPAAcAAAAJAAcAAAAEAAYAAAAHAAYAAAAEAAcAAAAHAAcAAAAFAAYAAAAIAAYAAAAFAAcAAAALAAUAAAAGAAYAAAAJAAYAAAAGAAcAAAACAAYAAAAAAAgAAAADAAIAAAAAAAkAAAADAAIAAAABAAgAAAAIAAYAAAABAAkAAAAIAAcAAAACAAgAAAAJAAYAAAACAAkAAAAJAAcAAAAPAAgAAAAIAAQAAAAPAAkAAAACAAYAAAAQAAgAAAAIAAYAAAAQAAkAAAAMAAUAAAAKAAUAAAAJAAQAAAAKAAYAAAACAAYAAAALAAUAAAACAAYAAAALAAYAAAACAAYAAAAQAAYAAAAJAAQAAAAQAAcAAAACAAYAAAARAAcAAAACAAYAAAARAAYAAAACAAYAAAAHAAcAAAACAAYAAAAEAAQAAAACAAYAAAACAAQAAAAJAAQAAAAAAAYAAAADAAIAAAAKAAoAAAACAAEAAAAHAAoAAAACAAEAAAAFAAkAAAACAAYAAAAGAAkAAAAMAAUAAAAHAAkAAAACAAYAAAAIAAkAAAAIAAYAAAAJAAkAAAAJAAYAAAAKAAkAAAACAAYAAAALAAkAAAACAAYAAAAMAAkAAAACAAYAAAANAAkAAAAHAAYAAAANAAoAAAACAAEAAAAOAAoAAAACAAEAAAAPAAoAAAACAAEAAAAQAAoAAAACAAEAAAARAAoAAAACAAEAAAARAAkAAAAMAAUAAAARAAgAAAAJAAYAAAARAAIAAAACAAYAAAARAAEAAAAJAAQAAAARAAAAAAACAAMAAAAQAAAAAAACAAMAAAAPAAAAAAACAAMAAAASAAAAAAACAAMAAAATAAAAAAACAAYAAAASAAEAAAABAAIAAAASAAIAAAABAAIAAAASAAMAAAABAAIAAAASAAQAAAABAAIAAAASAAUAAAABAAIAAAASAAYAAAABAAIAAAASAAcAAAABAAIAAAASAAgAAAABAAIAAAASAAkAAAABAAIAAAASAAoAAAACAAEAAAATAAEAAAACAAYAAAATAAIAAAACAAYAAAATAAMAAAACAAYAAAATAAQAAAACAAYAAAATAAUAAAACAAYAAAATAAYAAAACAAYAAAATAAcAAAACAAYAAAATAAgAAAACAAYAAAATAAkAAAACAAYAAAATAAoAAAACAAYAAAAMAAoAAAACAAEAAAALAAoAAAACAAEAAAAJAAoAAAACAAEAAAAIAAoAAAACAAEAAAAGAAoAAAACAAEAAAAFAAoAAAACAAEAAAAEAAoAAAACAAEAAAADAAoAAAACAAEAAAACAAoAAAACAAEAAAABAAoAAAACAAEAAAAAAAoAAAACAAEAAAAAAAcAAAADAAIAAAAAAAUAAAADAAIAAAABAAcAAAAIAAUAAAABAAYAAAAJAAYAAAABAAUAAAACAAYAAAACAAUAAAAHAAYAAAADAAUAAAACAAYAAAADAAQAAAACAAYAAAADAAMAAAACAAYAAAACAAMAAAALAAUAAAAEAAUAAAACAAYAAAAFAAUAAAACAAYAAAAGAAUAAAACAAYAAAAGAAQAAAACAAYAAAAGAAMAAAACAAYAAAAGAAIAAAACAAYAAAAFAAIAAAACAAYAAAAFAAMAAAACAAYAAAAEAAMAAAACAAYAAAAFAAQAAAACAAYAAAAHAAMAAAACAAYAAAAHAAQAAAACAAYAAAAIAAQAAAACAAYAAAAJAAQAAAACAAYAAAAKAAQAAAACAAYAAAALAAQAAAACAAYAAAAMAAQAAAACAAYAAAAMAAMAAAACAAYAAAAMAAIAAAACAAYAAAALAAIAAAACAAYAAAAKAAIAAAACAAYAAAAJAAIAAAACAAYAAAAJAAEAAAAIAAYAAAAIAAEAAAAHAAYAAAAHAAEAAAAJAAQAAAAHAAAAAAACAAMAAAAHAP//AAACAAYAAAAIAP//AAACAAYAAAAIAAAAAAACAAMAAAAJAAAAAAACAAMAAAAKAAAAAAACAAMAAAAKAAEAAAAJAAQAAAAIAAIAAAACAAYAAAAHAAIAAAACAAYAAAAJAAMAAAACAAYAAAAKAAMAAAACAAYAAAALAAMAAAACAAYAAAAJAAUAAAACAAYAAAAJAAYAAAACAAYAAAAJAAcAAAACAAYAAAAJAAgAAAACAAYAAAAIAAgAAAACAAYAAAAIAAcAAAACAAYAAAAFAAgAAAAMAAUAAAAEAAgAAAACAAYAAAADAAgAAAACAAYAAAADAAkAAAAIAAUAAAAEAAkAAAAHAAYAAAAGAAgAAAACAAYAAAAHAAgAAAACAAYAAAAKAAcAAAACAAYAAAAIAAMAAAACAAYAAAAMAAYAAAACAAYAAAAMAAUAAAAHAAYAAAALAAcAAAACAAYAAAAKAAgAAAACAAYAAAALAAgAAAACAAYAAAAMAAgAAAACAAYAAAAMAAcAAAALAAUAAAANAAgAAAACAAYAAAAOAAkAAAACAAYAAAAOAAgAAAACAAYAAAD//woAAAACAAEAAAA=")
tile_set = SubResource("TileSet_hrye7")

[node name="Foreground" type="TileMapLayer" parent="StartScreen"]
texture_filter = 1
position = Vector2(-31, -9)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAQAAEAAAAKAA4AAAARAAEAAAALAA4AAAAOAAkAAAAEAA0AAAAPAAkAAAAFAA0AAAAQAAkAAAAGAA0AAAABAAkAAAAKAAwAAAABAAEAAAAEAAwAAAACAAEAAAAFAAwAAAADAAEAAAAGAAwAAAA=")
tile_set = SubResource("TileSet_hrye7")

[node name="StartLabel" type="Label" parent="StartScreen"]
offset_left = 214.0
offset_top = 249.0
offset_right = 655.0
offset_bottom = 309.0
theme_override_fonts/font = SubResource("SystemFont_w3o8x")
theme_override_font_sizes/font_size = 59
text = "Press space to start!"

[node name="BlobBrigade" type="Label" parent="StartScreen"]
offset_left = 201.0
offset_top = 131.0
offset_right = 936.0
offset_bottom = 282.0
theme_override_fonts/font = SubResource("SystemFont_t7gnw")
theme_override_font_sizes/font_size = 150
text = "Blob Brigade"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Instructions" type="Label" parent="StartScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 445.5
offset_top = 406.0
offset_right = 706.5
offset_bottom = 462.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("SystemFont_bxxou")
theme_override_font_sizes/font_size = 55
text = "Instructions:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Instructions2" type="Label" parent="StartScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 397.5
offset_top = 460.0
offset_right = 754.5
offset_bottom = 556.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("SystemFont_bxxou")
theme_override_font_sizes/font_size = 37
text = "Press space to jump
Hold space to disassemble"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EndScreen" type="Node2D" parent="."]
visible = false

[node name="Background" type="TileMapLayer" parent="EndScreen"]
texture_filter = 1
position = Vector2(-31, -9)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAAAAAAAAACAAMAAAAAAAEAAAADAAIAAAAAAAIAAAADAAIAAAABAAAAAAACAAMAAAABAAEAAAAIAAYAAAABAAIAAAAMAAIAAAACAAAAAAACAAMAAAACAAEAAAAJAAYAAAACAAIAAAANAAIAAAADAAAAAAACAAMAAAADAAEAAAAMAAIAAAADAAIAAAAHAAYAAAAEAAAAAAACAAMAAAAEAAEAAAALAAUAAAAEAAIAAAANAAMAAAAFAAAAAAACAAMAAAAFAAEAAAAGAAcAAAAGAAAAAAACAAMAAAAGAAEAAAAHAAcAAAAAAAMAAAADAAIAAAAAAAQAAAADAAIAAAABAAMAAAAHAAYAAAABAAQAAAAHAAcAAAAHAAUAAAAGAAYAAAAHAAYAAAACAAYAAAAIAAUAAAAMAAcAAAAIAAYAAAACAAYAAAALAAAAAAACAAMAAAALAAEAAAAGAAcAAAAMAAAAAAACAAMAAAAMAAEAAAAHAAcAAAAPAAEAAAAGAAYAAAAPAAIAAAAMAAIAAAAQAAEAAAAHAAYAAAAQAAIAAAANAAIAAAANAAMAAAACAAIAAAANAAQAAAACAAIAAAANAAUAAAAIAAcAAAAOAAMAAAACAAIAAAAOAAQAAAACAAIAAAAOAAUAAAAJAAcAAAAPAAMAAAAIAAYAAAAPAAQAAAAKAAYAAAAPAAUAAAAKAAcAAAAQAAMAAAAJAAYAAAAQAAQAAAALAAYAAAAQAAUAAAALAAcAAAARAAMAAAAMAAUAAAARAAQAAAAMAAYAAAARAAUAAAAMAAcAAAANAAAAAAACAAMAAAANAAEAAAAMAAIAAAANAAIAAAACAAIAAAAOAAAAAAACAAMAAAAOAAEAAAANAAIAAAAOAAIAAAAMAAQAAAACAAYAAAAMAAIAAAACAAcAAAAIAAYAAAADAAYAAAANAAIAAAADAAcAAAAJAAYAAAANAAYAAAAHAAYAAAANAAcAAAAHAAcAAAAOAAYAAAAKAAMAAAAOAAcAAAAKAAQAAAAPAAYAAAALAAMAAAAPAAcAAAALAAQAAAAEAAYAAAAHAAYAAAAEAAcAAAAHAAcAAAAFAAYAAAAIAAYAAAAFAAcAAAALAAUAAAAGAAYAAAAJAAYAAAAGAAcAAAACAAYAAAAAAAgAAAADAAIAAAAAAAkAAAADAAIAAAABAAgAAAAMAAIAAAABAAkAAAAIAAcAAAACAAgAAAANAAIAAAACAAkAAAAJAAcAAAAPAAgAAAAMAAMAAAAPAAkAAAACAAYAAAAQAAgAAAAMAAIAAAAQAAkAAAAMAAUAAAAKAAUAAAANAAMAAAAKAAYAAAACAAYAAAALAAUAAAACAAYAAAALAAYAAAACAAYAAAAQAAYAAAAJAAQAAAAQAAcAAAACAAYAAAARAAcAAAACAAYAAAARAAYAAAACAAYAAAAHAAcAAAACAAYAAAAEAAQAAAACAAYAAAACAAQAAAANAAMAAAAAAAYAAAADAAIAAAAKAAoAAAACAAEAAAAHAAoAAAACAAEAAAAFAAkAAAACAAYAAAAGAAkAAAAMAAUAAAAHAAkAAAACAAYAAAAIAAkAAAAIAAYAAAAJAAkAAAAJAAYAAAAKAAkAAAALAAcAAAALAAkAAAACAAYAAAAMAAkAAAAHAAYAAAANAAkAAAAHAAYAAAANAAoAAAACAAEAAAAOAAoAAAACAAEAAAAPAAoAAAACAAEAAAAQAAoAAAACAAEAAAARAAoAAAACAAEAAAARAAkAAAAMAAUAAAARAAgAAAAJAAYAAAARAAIAAAACAAYAAAARAAEAAAAJAAQAAAARAAAAAAACAAMAAAAQAAAAAAACAAMAAAAPAAAAAAACAAMAAAASAAAAAAACAAMAAAATAAAAAAACAAYAAAASAAEAAAABAAIAAAASAAIAAAABAAIAAAASAAMAAAABAAIAAAASAAQAAAABAAIAAAASAAUAAAABAAIAAAASAAYAAAABAAIAAAASAAcAAAABAAIAAAASAAgAAAABAAIAAAASAAkAAAABAAIAAAASAAoAAAACAAEAAAATAAEAAAACAAYAAAATAAIAAAACAAYAAAATAAMAAAACAAYAAAATAAQAAAACAAYAAAATAAUAAAACAAYAAAATAAYAAAACAAYAAAATAAcAAAACAAYAAAATAAgAAAACAAYAAAATAAkAAAACAAYAAAATAAoAAAACAAYAAAAMAAoAAAACAAEAAAALAAoAAAACAAEAAAAJAAoAAAACAAEAAAAIAAoAAAACAAEAAAAGAAoAAAACAAEAAAAFAAoAAAACAAEAAAAEAAoAAAACAAEAAAADAAoAAAACAAEAAAACAAoAAAACAAEAAAABAAoAAAACAAEAAAAAAAoAAAACAAEAAAAAAAcAAAADAAIAAAAAAAUAAAADAAIAAAABAAcAAAAMAAIAAAABAAYAAAAJAAYAAAABAAUAAAAMAAIAAAACAAUAAAALAAUAAAADAAUAAAACAAYAAAADAAQAAAAHAAYAAAADAAMAAAAJAAYAAAACAAMAAAAMAAIAAAAEAAUAAAANAAMAAAAFAAUAAAACAAYAAAAGAAUAAAACAAYAAAAGAAQAAAACAAYAAAAGAAMAAAACAAYAAAAGAAIAAAACAAYAAAAFAAIAAAACAAYAAAAFAAMAAAACAAYAAAAEAAMAAAAHAAYAAAAFAAQAAAACAAYAAAAHAAMAAAACAAYAAAAHAAQAAAACAAYAAAAIAAQAAAACAAYAAAAJAAQAAAACAAYAAAAKAAQAAAACAAYAAAALAAQAAAACAAYAAAAMAAQAAAACAAYAAAAMAAMAAAACAAYAAAAMAAIAAAACAAYAAAALAAIAAAACAAYAAAAKAAIAAAACAAYAAAAJAAIAAAALAAUAAAAJAAEAAAAIAAYAAAAIAAEAAAAMAAQAAAAHAAEAAAAJAAQAAAAHAAAAAAACAAMAAAAHAP//AAACAAYAAAAIAP//AAACAAYAAAAIAAAAAAACAAMAAAAJAAAAAAACAAMAAAAKAAAAAAACAAMAAAAKAAEAAAAJAAQAAAAIAAIAAAACAAYAAAAHAAIAAAANAAMAAAAJAAMAAAACAAYAAAAKAAMAAAACAAYAAAALAAMAAAACAAYAAAAJAAUAAAACAAYAAAAJAAYAAAACAAYAAAAJAAcAAAACAAYAAAAJAAgAAAACAAYAAAAIAAgAAAACAAYAAAAIAAcAAAACAAYAAAAFAAgAAAAMAAUAAAAEAAgAAAACAAYAAAADAAgAAAACAAYAAAADAAkAAAAIAAUAAAAEAAkAAAAHAAYAAAAGAAgAAAACAAYAAAAHAAgAAAAHAAYAAAAKAAcAAAACAAYAAAAIAAMAAAACAAYAAAAMAAYAAAACAAYAAAAMAAUAAAAMAAcAAAALAAcAAAACAAYAAAAKAAgAAAACAAYAAAALAAgAAAAHAAYAAAAMAAgAAAACAAYAAAAMAAcAAAALAAUAAAANAAgAAAALAAcAAAAOAAkAAAACAAYAAAAOAAgAAAACAAYAAAD//woAAAACAAEAAAA=")
tile_set = SubResource("TileSet_hrye7")

[node name="Foreground" type="TileMapLayer" parent="EndScreen"]
texture_filter = 1
position = Vector2(-31, -9)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAQAAEAAAAKAA4AAAARAAEAAAALAA4AAAAOAAkAAAAGAA0AAAAPAAkAAAAFAA0AAAAQAAkAAAAGAA0AAAABAAEAAAAMAA4AAAACAAEAAAANAA4AAAACAAkAAAAEAA0AAAADAAkAAAAFAA0AAAAHAAkAAAAEAA0AAAAIAAkAAAAFAA0AAAAJAAkAAAAGAA0AAAAEAAkAAAAGAA0AAAAFAAkAAAAFAA0AAAAGAAkAAAAGAA0AAAAMAAkAAAAEAA0AAAANAAkAAAAFAA0AAAA=")
tile_set = SubResource("TileSet_hrye7")

[node name="YouTried" type="Label" parent="EndScreen"]
offset_left = 393.0
offset_top = 250.0
offset_right = 834.0
offset_bottom = 310.0
theme_override_fonts/font = SubResource("SystemFont_w3o8x")
theme_override_font_sizes/font_size = 59
text = "Press space to retry"

[node name="YouDied" type="Label" parent="EndScreen"]
offset_left = 201.0
offset_top = 131.0
offset_right = 936.0
offset_bottom = 282.0
theme_override_fonts/font = SubResource("SystemFont_t7gnw")
theme_override_font_sizes/font_size = 150
text = "You Died!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="YouGotTo" type="Label" parent="EndScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 445.5
offset_top = 406.0
offset_right = 706.5
offset_bottom = 462.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("SystemFont_bxxou")
theme_override_font_sizes/font_size = 55
text = "You got to level:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="EndScreen"]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 397.5
offset_top = 460.0
offset_right = 754.5
offset_bottom = 556.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("SystemFont_bxxou")
theme_override_font_sizes/font_size = 70
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinScreen" type="Node2D" parent="."]
visible = false

[node name="Background" type="TileMapLayer" parent="WinScreen"]
texture_filter = 1
position = Vector2(-31, -9)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAAAAAAAAACAAMAAAAAAAEAAAADAAIAAAAAAAIAAAADAAIAAAABAAAAAAACAAMAAAABAAEAAAAIAAYAAAABAAIAAAAMAAIAAAACAAAAAAACAAMAAAACAAEAAAAJAAYAAAACAAIAAAANAAIAAAADAAAAAAACAAMAAAADAAEAAAAMAAIAAAADAAIAAAAHAAYAAAAEAAAAAAACAAMAAAAEAAEAAAALAAUAAAAEAAIAAAANAAMAAAAFAAAAAAACAAMAAAAFAAEAAAAGAAcAAAAGAAAAAAACAAMAAAAGAAEAAAAHAAcAAAAAAAMAAAADAAIAAAAAAAQAAAADAAIAAAABAAMAAAAHAAYAAAABAAQAAAAHAAcAAAAHAAUAAAAGAAYAAAAHAAYAAAACAAYAAAAIAAUAAAAMAAcAAAAIAAYAAAACAAYAAAALAAAAAAACAAMAAAALAAEAAAAGAAcAAAAMAAAAAAACAAMAAAAMAAEAAAAHAAcAAAAPAAEAAAAGAAYAAAAPAAIAAAAMAAIAAAAQAAEAAAAHAAYAAAAQAAIAAAANAAIAAAANAAMAAAACAAIAAAANAAQAAAACAAIAAAANAAUAAAAIAAcAAAAOAAMAAAACAAIAAAAOAAQAAAACAAIAAAAOAAUAAAAJAAcAAAAPAAMAAAAIAAYAAAAPAAQAAAAKAAYAAAAPAAUAAAAKAAEAAAAQAAMAAAAJAAYAAAAQAAQAAAALAAYAAAAQAAUAAAALAAEAAAARAAMAAAAMAAUAAAARAAQAAAAMAAYAAAARAAUAAAAMAAcAAAANAAAAAAACAAMAAAANAAEAAAAMAAIAAAANAAIAAAACAAIAAAAOAAAAAAACAAMAAAAOAAEAAAANAAIAAAAOAAIAAAAMAAQAAAACAAYAAAAKAAIAAAACAAcAAAAIAAYAAAADAAYAAAALAAIAAAADAAcAAAAJAAYAAAANAAYAAAACAAIAAAANAAcAAAACAAIAAAAOAAYAAAACAAIAAAAOAAcAAAACAAIAAAAPAAYAAAAKAAIAAAAPAAcAAAACAAIAAAAEAAYAAAACAAIAAAAEAAcAAAACAAIAAAAFAAYAAAACAAIAAAAFAAcAAAACAAIAAAAGAAYAAAACAAIAAAAGAAcAAAACAAIAAAAAAAgAAAADAAIAAAAAAAkAAAADAAIAAAABAAgAAAAMAAIAAAABAAkAAAAIAAcAAAACAAgAAAANAAIAAAACAAkAAAAJAAcAAAAPAAgAAAAMAAMAAAAPAAkAAAACAAYAAAAQAAgAAAAMAAIAAAAQAAkAAAAMAAUAAAAKAAUAAAANAAMAAAAKAAYAAAACAAYAAAALAAUAAAACAAYAAAALAAYAAAACAAYAAAAQAAYAAAALAAIAAAAQAAcAAAACAAYAAAARAAcAAAACAAYAAAARAAYAAAACAAYAAAAHAAcAAAACAAIAAAAEAAQAAAACAAYAAAACAAQAAAANAAMAAAAAAAYAAAADAAIAAAAKAAoAAAACAAEAAAAHAAoAAAACAAEAAAAFAAkAAAACAAYAAAAGAAkAAAAMAAUAAAAHAAkAAAACAAYAAAAIAAkAAAAIAAYAAAAJAAkAAAAJAAYAAAAKAAkAAAALAAcAAAALAAkAAAACAAYAAAAMAAkAAAAHAAYAAAANAAkAAAAHAAYAAAANAAoAAAACAAEAAAAOAAoAAAACAAEAAAAPAAoAAAACAAEAAAAQAAoAAAACAAEAAAARAAoAAAACAAEAAAARAAkAAAAMAAUAAAARAAgAAAAJAAYAAAARAAIAAAACAAYAAAARAAEAAAAJAAQAAAARAAAAAAACAAMAAAAQAAAAAAACAAMAAAAPAAAAAAACAAMAAAASAAAAAAACAAMAAAATAAAAAAACAAYAAAASAAEAAAABAAIAAAASAAIAAAABAAIAAAASAAMAAAABAAIAAAASAAQAAAABAAIAAAASAAUAAAABAAIAAAASAAYAAAABAAIAAAASAAcAAAABAAIAAAASAAgAAAABAAIAAAASAAkAAAABAAIAAAASAAoAAAACAAEAAAATAAEAAAACAAYAAAATAAIAAAACAAYAAAATAAMAAAACAAYAAAATAAQAAAACAAYAAAATAAUAAAACAAYAAAATAAYAAAACAAYAAAATAAcAAAACAAYAAAATAAgAAAACAAYAAAATAAkAAAACAAYAAAATAAoAAAACAAYAAAAMAAoAAAACAAEAAAALAAoAAAACAAEAAAAJAAoAAAACAAEAAAAIAAoAAAACAAEAAAAGAAoAAAACAAEAAAAFAAoAAAACAAEAAAAEAAoAAAACAAEAAAADAAoAAAACAAEAAAACAAoAAAACAAEAAAABAAoAAAACAAEAAAAAAAoAAAACAAEAAAAAAAcAAAADAAIAAAAAAAUAAAADAAIAAAABAAcAAAAMAAIAAAABAAYAAAAJAAYAAAABAAUAAAAMAAIAAAACAAUAAAAKAAEAAAADAAUAAAALAAEAAAADAAQAAAAHAAYAAAADAAMAAAAJAAYAAAACAAMAAAAMAAIAAAAEAAUAAAANAAMAAAAFAAUAAAACAAYAAAAGAAUAAAACAAYAAAAGAAQAAAACAAYAAAAGAAMAAAACAAYAAAAGAAIAAAACAAYAAAAFAAIAAAACAAYAAAAFAAMAAAACAAYAAAAEAAMAAAAHAAYAAAAFAAQAAAACAAYAAAAHAAMAAAACAAYAAAAHAAQAAAACAAYAAAAIAAQAAAACAAYAAAAJAAQAAAACAAYAAAAKAAQAAAACAAYAAAALAAQAAAACAAYAAAAMAAQAAAACAAYAAAAMAAMAAAACAAYAAAAMAAIAAAACAAYAAAALAAIAAAACAAYAAAAKAAIAAAACAAYAAAAJAAIAAAALAAUAAAAJAAEAAAAIAAYAAAAIAAEAAAAMAAQAAAAHAAEAAAAJAAQAAAAHAAAAAAACAAMAAAAHAP//AAACAAYAAAAIAP//AAACAAYAAAAIAAAAAAACAAMAAAAJAAAAAAACAAMAAAAKAAAAAAACAAMAAAAKAAEAAAAJAAQAAAAIAAIAAAACAAYAAAAHAAIAAAANAAMAAAAJAAMAAAACAAYAAAAKAAMAAAACAAYAAAALAAMAAAACAAYAAAAJAAUAAAACAAYAAAAJAAYAAAACAAYAAAAJAAcAAAACAAIAAAAJAAgAAAACAAYAAAAIAAgAAAACAAYAAAAIAAcAAAACAAIAAAAFAAgAAAAMAAUAAAAEAAgAAAACAAYAAAADAAgAAAACAAYAAAADAAkAAAAIAAUAAAAEAAkAAAAHAAYAAAAGAAgAAAACAAYAAAAHAAgAAAAHAAYAAAAKAAcAAAACAAIAAAAIAAMAAAACAAYAAAAMAAYAAAACAAIAAAAMAAUAAAAMAAcAAAALAAcAAAACAAIAAAAKAAgAAAACAAYAAAALAAgAAAAHAAYAAAAMAAgAAAACAAYAAAAMAAcAAAACAAIAAAANAAgAAAALAAcAAAAOAAkAAAACAAYAAAAOAAgAAAACAAYAAAD//woAAAACAAEAAAA=")
tile_set = SubResource("TileSet_hrye7")

[node name="Foreground" type="TileMapLayer" parent="WinScreen"]
texture_filter = 1
position = Vector2(-31, -9)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAABAAkAAAAMAAkAAAARAAkAAAAMAAkAAAAGAAkAAAANAAkAAAACAAkAAAAMAAwAAAAQAAkAAAAMAAwAAAAMAAkAAAALAAwAAAANAAkAAAAKAAwAAAAEAAkAAAAKAAwAAAAPAAgAAAANAAoAAAAPAAkAAAANAAsAAAACAAEAAAAEAAwAAAADAAEAAAAFAAwAAAAEAAEAAAAGAAwAAAAPAAEAAAACAAwAAAAPAAIAAAACAA0AAAA=")
tile_set = SubResource("TileSet_hrye7")

[node name="YouTried" type="Label" parent="WinScreen"]
offset_left = 393.0
offset_top = 250.0
offset_right = 834.0
offset_bottom = 310.0
theme_override_fonts/font = SubResource("SystemFont_w3o8x")
theme_override_font_sizes/font_size = 59
text = "Congratulations!"

[node name="YouDied" type="Label" parent="WinScreen"]
offset_left = 201.0
offset_top = 131.0
offset_right = 936.0
offset_bottom = 282.0
theme_override_fonts/font = SubResource("SystemFont_t7gnw")
theme_override_font_sizes/font_size = 150
text = "You Win!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="YouGotTo" type="Label" parent="WinScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 445.5
offset_top = 406.0
offset_right = 706.5
offset_bottom = 462.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("SystemFont_bxxou")
theme_override_font_sizes/font_size = 55
text = "It took you this many tries:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tries" type="Label" parent="WinScreen"]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 397.5
offset_top = 460.0
offset_right = 754.5
offset_bottom = 556.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("SystemFont_bxxou")
theme_override_font_sizes/font_size = 70
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="Flash" to="." method="_on_flash_timeout"]
